<project
  xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>jp.dodododo</groupId>
  <artifactId>samurai-dao</artifactId>
  <packaging>jar</packaging>
  <name>dao</name>
  <version>1.3.0</version>
<!--
  <version>1.3.0-RC5</version>
  <version>1.3.0</version>
  <version>1.3.0-SNAPSHOT</version>
-->
  <description>samurai-dao is a simple, high performance object/relational persistence and query service.</description>
  <url>https://github.com/samurailibs/samurai-dao/</url>
  <inceptionYear>2008-2025</inceptionYear>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <scm>
    <url>https://github.com/samurailibs/samurai-dao</url>
    <connection>https://github.com/samurailibs/samurai-dao.git</connection>
    <developerConnection>https://github.com/samurailibs/samurai-dao.git</developerConnection>
  </scm>
  <developers>
    <developer>
      <id>satoshi-kimura</id>
      <name>Satoshi Kimura</name>
      <email>satoshi@kimura.id</email>
      <url>http://dodododo.jp/</url>
      <roles>
        <role>lead</role>
        <role>architect</role>
        <role>developer</role>
      </roles>
      <timezone>-9</timezone>
    </developer>
  </developers>
  <issueManagement>
    <system>github</system>
    <url>https://github.com/samurailibs/samurai-dao/issues</url>
  </issueManagement>
  <distributionManagement>
    <repository>
      <id>ossrh</id>
      <name>Nexus Release Repository</name>
      <uniqueVersion>false</uniqueVersion>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
    <snapshotRepository>
      <id>ossrh</id>
      <name>Nexus Release Repository Snapshots</name>
      <uniqueVersion>false</uniqueVersion>
      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
    </snapshotRepository>
  </distributionManagement>
  <profiles>
    <profile>
      <id>release-sign-artifacts</id>
      <activation>
        <property>
          <name>performRelease</name>
          <value>true</value>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.6</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>

    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.6</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>

  </profiles>
  <build>
    <extensions>
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
        <artifactId>wagon-webdav</artifactId>
      </extension>
    </extensions>
    <defaultGoal>validate</defaultGoal>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.sonatype.plugins</groupId>
          <artifactId>nexus-staging-maven-plugin</artifactId>
          <version>1.6</version>
          <extensions>true</extensions>
          <configuration>
          <serverId>ossrh</serverId>
          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <source>16</source>
            <target>16</target>
            <encoding>UTF-8</encoding>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <configuration>
            <updateReleaseInfo>true</updateReleaseInfo>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.0.1</version>
        <executions>
          <execution>
            <id>source-jar</id>
            <phase>package</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.0.1</version>
        <configuration>
          <use>false</use>
          <quiet>true</quiet>
          <failOnError>false</failOnError>
          <source>16</source>
          <encoding>UTF-8</encoding>
          <docencoding>UTF-8</docencoding>
          <charset>UTF-8</charset>

          <locale>en_US</locale>
          <links>
            <link>http://docs.oracle.com/javase/8/docs/api/</link>
            <link>http://java.sun.com/javase/7/docs/api/</link>
            <link>http://java.sun.com/javase/6/docs/api/</link>
            <link>http://java.sun.com/javaee/5/docs/api/</link>
            <link>http://aopalliance.sourceforge.net/doc/</link>
          </links>
          <!--
          <locale>en_US</locale>
          <links>
            <link>http://docs.oracle.com/javase/8/docs/api/</link>
            <link>http://java.sun.com/javase/7/docs/api/</link>
            <link>http://java.sun.com/javase/6/docs/api/</link>
            <link>http://java.sun.com/javaee/5/docs/api/</link>
            <link>http://aopalliance.sourceforge.net/doc/</link>
          </links>
          <locale>ja_JP</locale>
          <links>
            <link>http://java.sun.com/javase/ja/6/docs/ja/api/</link>
            <link>http://java.sun.com/j2ee/1.4/docs/api/</link>
            <link>http://aopalliance.sourceforge.net/doc/</link>
          </links>
          -->
        </configuration>
        <executions>
          <execution>
            <id>javadoc-jar</id>
            <phase>package</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <groupId>ognl</groupId>
      <artifactId>ognl</artifactId>
      <version>3.2.7</version>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>jp.dodododo.janerics</groupId>
      <artifactId>janerics</artifactId>
      <version>1.0.1</version>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <version>1.2</version>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>org.freemarker</groupId>
      <artifactId>freemarker</artifactId>
      <version>2.3.28</version>
      <type>jar</type>
    </dependency>
    <dependency>
      <groupId>org.apache.geronimo.specs</groupId>
      <artifactId>geronimo-j2ee_1.4_spec</artifactId>
      <version>1.0</version>
      <type>jar</type>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.14.0</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>log4j</groupId>
      <artifactId>log4j</artifactId>
      <version>1.2.17</version>
      <type>jar</type>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>testcontainers</artifactId>
      <version>1.21.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>1.21.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.testcontainers</groupId>
      <artifactId>postgresql</artifactId>
      <version>1.21.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>42.7.3</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.8.1</version>
      <type>jar</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <version>2.4.1</version>
      <type>jar</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.xerial</groupId>
      <artifactId>sqlite-jdbc</artifactId>
      <version>3.8.7</version>
      <!--
      <version>3.7.2</version>
      <version>3.7.8-SNAPSHOT</version>
      <version>3.7.6.3-SNAPSHOT</version>
      <version>3.7.8-SNAPSHOT</version>
      <version>3.25.2</version>
       -->
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>8.0.13</version>
      <type>jar</type>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>jp.dodododo</groupId>
      <artifactId>samurai-dao-dialect-mysql-8</artifactId>
      <version>1.2.0</version>
      <type>jar</type>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
